\name{NEWS}
\title{News for \R Package \pkg{Pigenegene}}

\section{Changes in version 1.21.36 (2021-11-16)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item Habil added the \code{doReturNetworks} argument to \code{one.step.pigengene()}.
    }
  }
}

\section{Changes in version 1.21.34 (2021-11-12)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item Habil renamed \code{identify.modules()} to
      \code{determine.modules()}.
    }
  }
}

\section{Changes in version 1.21.30 (2021-11-12)}{
  \subsection{New functions}{
    \itemize{
      \item Neda exported \code{identify.modules()},
      \code{make.filter()}, and \code{apply.filter()} functions.
    }
  }
}

\section{Changes in version 1.19.50 (2021-10-14)}{
  \subsection{New functions}{
    \itemize{
      \item Neda added the \code{identify.modules()},
      \code{make.filter()}, and \code{apply.filter()} functions, but not
      exported them yet. 
    }
  }
}

\section{Changes in version 1.19.30 (2021-09-08)}{
   \subsection{Bug Fixes}{
       \itemize{
         \item The \code{averaged.network()} function does not
	 have the \code{nodes} argument in bnlearn Version >=4.7, and
	 thus this argument was removed.
    }
  }
}

\section{Changes in version 1.19.24 (2021-08-06)}{
  \subsection{New functions}{
    \itemize{
      \item The \code{get.enriched.pw()} function is added. 
    }
  }
   \subsection{Bug Fixes}{
       \itemize{
         \item A bug fix in the \code{gene.mapping()} function that used to occur
         when we had multiple output databases. 
    }
  }
}

\section{Changes in version 1.19.10 (2021-06-25)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The \code{message.if()} function can now write the message
      in a text file.
    }
  }
}

\section{Changes in version 1.19.8 (2021-05-25)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item The C50 plot function seems to have different behavior when